I changed the configuration for mathjax and fixed the horizontal scroll bar issue

--- a/app/components/Preview/style.scss
+++ b/app/components/Preview/style.scss
@@ -11,4 +11,13 @@ preview {
       color: #6cc0e5;
     }
   }
-}
+
+
+  // .show{
+    //   display: block;
+    // }
+  }
+
+  .hide{
+    display: none !important;
+  }
